--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
   <body>
     <div class="about-section">
       <h1>About Us Page</h1>
-      <p>We are Developers of this website.This is Our Term Work Project.</p>
+      <p>I am Developer of this website.This is Our Term Work Project.</p>
       <p>
         If you want to know about Us or want to contact us here are some details
         and contact numbers.If you want You can contact Us.Hope you like this
@@ -95,9 +95,9 @@
             <p>I am student of BCA-III year.</p>
             <p>raunak200308@gmail.com</p>
             <p>
-              <button class="button">
-                <a href="mailto:raunak200308@gmail.com">contact</a>
-              </button>
+              <a class="button" href="mailto:raunak200308@gmail.com">
+                contact
+              </a>
             </p>
           </div>
         </div>
