--- a/index.html
+++ b/index.html
@@ -1,59 +1,213 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Quiz App</title>
-    <link
-      href="https://fonts.googleapis.com/css2?
-        family=Exo+2:wght@600&family=Exo:ital,wght@1,600&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <title>Online Quiz System</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles/style1.css" />
     <script
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
       type="text/javascript"
     ></script>
-    <link rel="stylesheet" href="styles/style.css" />
   </head>
 
   <body>
-    <div id="container">
-      <div id="start">Start Quiz</div>
-      <div id="guide">
-        <h2>Quiz Guide</h2>
-        <h4>1.You Have Only 20 Seconds For Each Questions.</h4>
-        <h4>2.Once You Select Your Answer.It Can't Be Undone.</h4>
-        <h4>3.You'll Get Points On The Basis Of Your Correct Answers.</h4>
-        <h4>4.You Can't Exit From The Quiz While You Are Playing.</h4>
-        <div id="button">
-          <button id="exit">Exit</button>
-          <button id="continue">Continue</button>
+    <div class="full-page">
+      <div class="navbar">
+        <div class="h-title">
+          <a>Online Quiz System</a><br />
+          <p>Play Quiz and Build Your Knowledge</p>
         </div>
+
+        <nav>
+          <ul id="MenuItems">
+            <li><a href="">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="dropdown">
+              Subjects
+              <div class="dropdown-content">
+                <a href="quiz.html" onclick="tableSel('adonet')">ADO .Net</a>
+                <a href="quiz.html" onclick="tableSel('dscience')"
+                  >Data Science</a
+                >
+                <a href="quiz.html" onclick="tableSel('csecurity')"
+                  >Cyber security</a
+                >
+                <a href="quiz.html" onclick="tableSel('fcomputer')"
+                  >Fundamental Computer</a
+                >
+                <a href="quiz.html" onclick="tableSel('linux')">Linux</a>
+                <a href="quiz.html" onclick="tableSel('python')">Python</a>
+                <a href="quiz.html" onclick="tableSel('rdbms')">RDBMS</a>
+                <a href="quiz.html" onclick="tableSel('cprogram')">C Program</a>
+              </div>
+            </li>
+            <li><a href="contact.html">Contact</a></li>
+            <li id="loginNav">
+              <button
+                class="loginbtn"
+                onclick="document.getElementById('login-form').style.display='block' "
+                style="width: auto"
+              >
+                Login
+              </button>
+            </li>
+            <li id="logoutNav">
+              <button class="loginbtn" onclick="logout()" style="width: auto">
+                Logout
+              </button>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <div id="quiz" class="quiz_style">
-        <div id="quiz_header">
-          <h5>Amazing Quiz App</h5>
-          <div id="timer">
-            <h6>Time Left</h6>
-            <h6 id="time">20</h6>
+      <div id="login-form" class="login-page">
+        <div class="form-box">
+          <div class="button-box">
+            <div id="btn"></div>
+            <button type="button" onclick="login()" class="toggle-btn">
+              Log In
+            </button>
+            <button type="button" onclick="register()" class="toggle-btn">
+              Register
+            </button>
           </div>
-          <div id="right" onclick="nextQue()">
-            <i class="fa fa-chevron-right"></i>
-          </div>
+          <form
+            id="login"
+            class="input-group-login"
+            action="php/login.php"
+            method="POST"
+          >
+            <input
+              type="text"
+              class="input-field"
+              placeholder="Email-id"
+              name="email"
+              required
+            />
+            <input
+              type="password"
+              class="input-field"
+              name="password"
+              placeholder="Enter password"
+              required
+            />
+            <input type="checkbox" class="check-box" /><span
+              >Remember password</span
+            >
+            <button type="submit" class="submit-btn" name="save">Log in</button>
+          </form>
+          <form
+            id="register"
+            action="php/register.php"
+            method="POST"
+            class="input-group-register"
+          >
+            <input
+              type="text"
+              class="input-field"
+              name="fname"
+              placeholder="First Name"
+              required
+            />
+            <input
+              type="text"
+              class="input-field"
+              name="lname"
+              placeholder="Last Name"
+              required
+            />
+            <input
+              type="email"
+              class="input-field"
+              name="email"
+              placeholder="Email Id"
+              required
+            />
+            <input
+              type="password"
+              class="input-field"
+              name="password"
+              placeholder="Enter Password"
+              required
+            />
+            <input
+              type="password"
+              class="input-field"
+              placeholder="Confirm Password"
+              required
+            />
+            <input type="checkbox" class="check-box" required /><span
+              >I agree to the terms and conditions</span
+            >
+            <button type="submit" name="save" class="submit-btn">
+              Register
+            </button>
+          </form>
         </div>
-        <div id="main"></div>
-      </div>
-      <div id="result">
-        <i class="fas fa-trophy"></i>
-        <h6>You Have Completed The Quiz</h6>
-        <h6 id="points"></h6>
-        <button id="quit" onclick="window.location.href = '/quiz/home.html'">
-          Quit Quiz
-        </button>
-        <button id="StartAgain" onclick="startAg()">Start Again</button>
-        <button onclick="check()">Check Answers</button>
       </div>
     </div>
-    <script src="js/script.js"></script>
+    <footer>
+      <div class="fbox">
+        <div class="head">Contact Info</div>
+        <br />
+        <a>Email: raunak200308@gmail.com</a> <br />
+      </div>
+      <div class="fbox">
+        <div class="head">Location</div>
+        <br />
+        <a>Maharashtra,India</a>
+      </div>
+      <div class="fbox">
+        <div class="head">Quick Links</div>
+        <br />
+        <a href="about.html">About</a> <br />
+        <a href="">Services</a> <br />
+        <a href="contact.html">Contact</a>
+      </div>
+    </footer>
+    <script>
+      var x = document.getElementById("login");
+      var y = document.getElementById("register");
+      var z = document.getElementById("btn");
+      function register() {
+        x.style.left = "-400px";
+        y.style.left = "50px";
+        z.style.left = "110px";
+      }
+      function login() {
+        x.style.left = "50px";
+        y.style.left = "450px";
+        z.style.left = "0px";
+      }
+    </script>
+
+    <script>
+      if (localStorage.getItem("name") != null) {
+        document.getElementById("loginNav").style.display = "none";
+      } else {
+        document.getElementById("logoutNav").style.display = "none";
+      }
+      function tableSel(sub) {
+        localStorage.setItem("sub", sub);
+      }
+
+      async function logout() {
+        localStorage.removeItem("name");
+        localStorage.removeItem("sub");
+        await $.ajax({
+          type: "get",
+          url: "/quiz/php/logout.php",
+          success: function (data) {
+            console.log(data);
+          },
+        });
+        window.location.reload();
+      }
+      var modal = document.getElementById("login-form");
+      window.onclick = function (event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      };
+    </script>
   </body>
 </html>
