--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
     />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
       type="text/javascript"
     ></script>
     <link rel="stylesheet" href="styles/style.css" />
